# ARM-NEON-Compositor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  documentation.yml
Doxygen/: custom_stylesheet.css  dir_000006_000008.html  dir_000007_000000.html  dir_000010_000006.html  dir_000010_000008.html  dir_02944bc74e87424800bd3eeee3e7ee51.html  dir_10af9090249a87327141b074d0f02391.html  dir_10af9090249a87327141b074d0f02391_dep.map  dir_10af9090249a87327141b074d0f02391_dep.md5  dir_14a6432025694f4c6552cd7deb5d2ad7.html  dir_3c04f67c99df5e2d7829886e27b87c88.html  dir_3c04f67c99df5e2d7829886e27b87c88_dep.map  dir_3c04f67c99df5e2d7829886e27b87c88_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_76e1110bca4ccb73a8472fbb66a97827.html  dir_8ec3e9416f1a096279da42bd0c04ab6d.html  dir_8ec3e9416f1a096279da42bd0c04ab6d_dep.map  dir_8ec3e9416f1a096279da42bd0c04ab6d_dep.md5  dir_90c5bec27c94774c9e0ab767bc5d8d3f.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.map  dir_d28a4824dc47e487b107a5db32ef43c4_dep.md5  dir_d51c283313b24f3b5646335e4e6f4bba.html  dir_ee4a7651d28c69f3e59012ffc29f9af3.html  dir_ee4a7651d28c69f3e59012ffc29f9af3_dep.map  dir_ee4a7651d28c69f3e59012ffc29f9af3_dep.md5  examples.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  modules.html  namespacemembers.html  (+4 more)
Doxygen/d0/d6c/: group__rescale255.html  group__rescale255.map  group__rescale255.md5
Doxygen/d1/d57/: alpha-lib_8dox.html
Doxygen/d2/d2c/: Installation_8md.html
Doxygen/d2/d49/: perf__test_8py.html  perf__test_8py_source.html
Doxygen/d3/d1a/: rescale__type_8hpp__dep__incl.map  rescale__type_8hpp__dep__incl.md5
Doxygen/d3/d4f/: rescale_8hpp__dep__incl.map  rescale_8hpp__dep__incl.md5
Doxygen/d3/da6/: overlay__alpha_8hpp.html  overlay__alpha_8hpp_source.html
Doxygen/d4/d00/: group__overlay__alpha__c.html  group__overlay__alpha__c.map  group__overlay__alpha__c.md5
Doxygen/d4/dac/: src_2alpha-lib_2src_2overlay__alpha_8cpp.html  src_2alpha-lib_2src_2overlay__alpha_8cpp_source.html
Doxygen/d5/da8/: namespacecompare.html
Doxygen/d6/d90/: SIMD_8h__dep__incl.map  SIMD_8h__dep__incl.md5
Doxygen/d6/d96/: group__overlay__alpha.html  group__overlay__alpha.map  group__overlay__alpha.md5
Doxygen/d6/dec/: SIMD_8h.html  SIMD_8h_source.html
Doxygen/d7/d1a/: examples_2overlay__alpha_2overlay__alpha_8cpp__incl.map  examples_2overlay__alpha_2overlay__alpha_8cpp__incl.md5
Doxygen/d7/dca/: test-overlay__alpha_8cpp__incl.map  test-overlay__alpha_8cpp__incl.md5
Doxygen/d8/d17/: rescale_8hpp.html  rescale_8hpp_source.html
Doxygen/d8/d2f/: namespaceperf__test.html
Doxygen/d8/da8/: md_pages_Installation.html
Doxygen/d8/dbf/: compare_8py.html  compare_8py_source.html
Doxygen/d9/de1/: test-round_8cpp__incl.map  test-round_8cpp__incl.md5
Doxygen/da/d52/: overlay__alpha_8h__incl.map  overlay__alpha_8h__incl.md5
Doxygen/da/ddd/: README_8md.html
Doxygen/db/d02/: test-round_8cpp.html  test-round_8cpp_source.html
Doxygen/db/d07/: test-overlay__alpha_8cpp.html  test-overlay__alpha_8cpp_source.html
Doxygen/db/d4f/: overlay__alpha_8hpp__dep__incl.map  overlay__alpha_8hpp__dep__incl.md5
Doxygen/dc/d0e/: examples_2overlay_alpha_2overlay_alpha_8cpp-example.html
Doxygen/dc/d46/: examples_2perf_test_2perf_test_8py-example.html
Doxygen/dc/d95/: SIMD_8h__incl.map  SIMD_8h__incl.md5
Doxygen/dd/d0e/: overlay__alpha_8h__dep__incl.map  overlay__alpha_8h__dep__incl.md5
Doxygen/dd/dc2/: src_2alpha-lib_2src_2overlay__alpha_8cpp__incl.map  src_2alpha-lib_2src_2overlay__alpha_8cpp__incl.md5
Doxygen/de/d14/: examples_2overlay__alpha_2overlay__alpha_8cpp.html  examples_2overlay__alpha_2overlay__alpha_8cpp_source.html
Doxygen/de/d71/: overlay__alpha_8h.html  overlay__alpha_8h_source.html
Doxygen/de/dae/: overlay__alpha_8hpp__incl.map  overlay__alpha_8hpp__incl.md5
Doxygen/df/d07/: rescale_8hpp__incl.map  rescale_8hpp__incl.md5
Doxygen/df/d82/: rescale__type_8hpp.html  rescale__type_8hpp_source.html
Doxygen/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  groups_0.js  groups_1.js  groups_2.js  namespaces_0.js  (+20 more)
docs/: README.md
doxygen/: Doxyfile  custom_stylesheet.css  header.html
doxygen/images/: .gitignore
doxygen/pages/: Installation.md
examples/: CMakeLists.txt
examples/overlay_alpha/: CMakeLists.txt  overlay_alpha.cpp
examples/perf_test/: perf_test.py
examples/perf_test/output/: Wed Jul  8 15:12:30 2020 no-simd.csv  Wed Jul  8 15:13:39 2020 simd.csv  Wed Jul  8 15:17:16 2020 simd.csv  Wed Jul  8 15:20:15 2020 no-simd.csv  Wed Jul  8 15:45:17 2020 no-simd.csv  Wed Jul  8 15:50:07 2020 simd.csv  Wed Jul  8 22:47:42 2020 simd div255_round aarch64.csv  Wed Jul  8 22:49:26 2020 simd div255_round_approx aarch64.csv  Wed Jul  8 22:51:09 2020 simd div255_floor aarch64.csv  Wed Jul  8 22:52:49 2020 simd div256_round aarch64.csv  Wed Jul  8 22:54:28 2020 simd div256_floor aarch64.csv  compare.py
scripts/ci/: gen-docs.sh  install-doxygen.sh  install-neon2x86.sh
src/: CMakeLists.txt  main.cpp  test-round.cpp
src/alpha-lib/: ARM-SIMD32.h  CMakeLists.txt  SIMD.h  alpha-lib.dox  overlay_alpha.cpp  overlay_alpha.hpp  rescale.hpp
src/alpha-lib/include/alpha-lib/: overlay_alpha.h
src/alpha-lib/src/: overlay_alpha.cpp  rescale.hpp
src/alpha-lib/test/: CMakeLists.txt  test-overlay_alpha.cpp
